add: SpringDoc + small fixes